# speer-technologies-assessment

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: V1.sql
src/: auth.rs  common.rs  main.rs
src/routes/: mod.rs
src/routes/sessions/: post.rs
src/routes/tweets/: delete.rs  get.rs  patch.rs  post.rs
src/routes/users/: mod.rs  post.rs  put.rs
src/routes/users/liked_tweets/: delete.rs  mod.rs  post.rs
src/routes/users/sessions/: post.rs
src/routes/users/tweets/: delete.rs  get.rs  mod.rs  patch.rs  post.rs
tests/: endpoint.rs
tls/: cert.der  pkey.der
