[package]
name = "assessment"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9"
tokio = { version = "1.22", features = ["macros", "net", "rt-multi-thread"] }
rustls = { version = "0.20", default-features = false }
tokio-rustls = { version = "0.23", default-features = false }
h2 = "0.3"
http = "0.2"
bytes = "1.3"
sqlx = { version = "0.6", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
num_cpus = "1.14"
serde = "1.0"
serde_json = "1.0"
argon2 = "0.4.1"
once_cell = "1.16"

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots"] }

[profile.release]
lto = true
strip = true
codegen-units = 1